--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -25,7 +25,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="dropdown-item" href="{{ path('app_quiz_setup') }}">
+                            <a class="dropdown-item" href="{{ path('app_quiz_index') }}">
                                 create a quiz for a book
                             </a>
                         </li>
